# Scarlet-Nexus-Internal

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  Scarlet Nexus Trainer.lnk  premake5.lua
.github/workflows/: main.yml
ScarletNexus/src/: main.cpp  pointers.cpp  pointers.hpp  renderer.cpp
ScarletNexus/src/hooks/: swapchain_hook.cpp
ScarletNexus/src/menu/: player_menu.cpp  player_stats.cpp  setting_menu.cpp
ScarletNexus/src/utility/: player.hpp
injector/: CMakeLists.txt
injector/src/: common.hpp  injector.aps  injector.rc  main.cpp
injector/src/process/: process.hpp
openssl/: conaninfo.txt  conanmanifest.txt
openssl/include/: zconf.h
openssl/include/openssl/: configuration.h
openssl/lib/: zlib.lib
scarlet-nexus/: scarlet-nexus.vcxproj  scarlet-nexus.vcxproj.filters
scarlet-nexus-injector/: scarlet-nexus-injector.vcxproj  scarlet-nexus-injector.vcxproj.filters
scarlet-nexus-injector/src/: common.hpp  main.cpp  resource.h  scarlet-nexus-injector.rc
scarlet-nexus/src/: common.hpp  detour_hook.cpp  detour_hook.hpp  function_types.hpp  gui.cpp  gui.hpp  hooking.cpp  hooking.hpp  logger.hpp  main.cpp  pointers.cpp  pointers.hpp  renderer.cpp  renderer.hpp  return_address.asm  script_mgr.cpp  script_mgr.hpp  settings.hpp  thread_pool.cpp
scarlet-nexus/src/api/: hardware.hpp  integration.cpp  (+4 more)
scripts/: asio.cmake  discord.cmake  g3log.cmake  minhook.cmake  stbi.cmake  websocket.cmake
src/: benchmark.hpp  common.hpp  detour_hook.cpp  file_manager.hpp  function_types.hpp  gui.cpp  gui.hpp  hooking.cpp  hooking.hpp  logger.hpp  main.cpp  menu_settings.cpp  menu_settings.hpp  pointers.cpp  pointers.hpp  renderer.cpp  renderer.hpp  return_address.hpp  script.cpp  settings.cpp  settings.hpp  thread_pool.cpp  ufunction.cpp  ufunction.hpp
src/class/: engine_sdk.hpp  fname_pool.hpp  image_dimension.hpp  uobject.hpp  vector.hpp  weak_object.hpp
src/commands/: bool_command.cpp  bool_command.hpp  color_command.cpp  color_command.hpp  command.cpp  command.hpp  commands.cpp  commands.hpp  float_command.cpp  float_command.hpp  int_command.cpp  int_command.hpp  list_command.cpp  list_command.hpp  looped_command.cpp  looped_command.hpp  vector3_command.cpp  vector3_command.hpp
src/event_loop/: backend_events.cpp
src/file_manager/: file.cpp  file.hpp  folder.cpp
src/fonts/: rubik.cpp
src/hooking/: shellcode_crafter.hpp
src/hooks/: item_handler.cpp  process_event.cpp  swapchain_hook.cpp
src/memory/: pattern.cpp  pattern.hpp  pattern_batch.cpp  pattern_batch.hpp  pattern_cache.cpp  pattern_cache.hpp  pattern_hash.hpp
src/menu/: main_script.hpp  navigation_menu.cpp  navigation_menu.h  navigation_menu.txt  notification.cpp  player_menu.cpp  player_menu.h  player_stats.cpp  player_stats.h  setting_menu.cpp  setting_menu.h  submenu.hpp  view.hpp
src/server/: server_module.hpp  socket_client.hpp
src/settings/: settings.cpp  settings.hpp  state_serializer.cpp  state_serializer.hpp
src/textures/: checkbox.cpp  connect.cpp  ellohim.cpp  ellohim_cool.cpp  ellohim_green.cpp  ellohim_purple.cpp  halloween_2024.cpp  header.cpp  quantum.cpp  quantum_blue.cpp  quantum_green.cpp  textures.hpp  toggle.cpp  unknowncheats.cpp  wuthering_wave.cpp
src/ui/: abstract_option.hpp  abstract_submenu.hpp  base_option.hpp  base_submenu.hpp  bool_option.hpp  bool_slider_float_option.hpp  bool_slider_int_option.hpp  canvas.cpp  canvas.hpp  choose_option.hpp  number_option.hpp  player_submenu.hpp  reguler_option.hpp  reguler_submenu.hpp  sub_option.hpp  tabs_menu.hpp  ui_manager.cpp  ui_manager.hpp  ui_manager.txp  ui_manager.txt
src/unreal_engine/: NameCollisions.inl
src/utility/: joaat.hpp  player.hpp  unreal_engine_utility.hpp  utility.hpp
(+118 files in other folders)
